--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,11 @@
 ---
-- name: Install Zookeeper and Exhibitor
-  hosts: zk-servers
-  remote_user: root
+- name: Install Zookeeper
+  hosts: zookeeper_servers
+  remote_user: vagrant
+  user: root
+  sudo: true
 
   roles:
+    - common
+    - supervisor
     - zookeeper
