Add exhibitor deployment

--- a/aws.yml
+++ b/aws.yml
@@ -2,10 +2,6 @@
   hosts: localhost
   connection: local
   gather_facts: False
-  vars:
-    - region: "us-east-1"
-    - image: "ami-60b6c60a"
-    - instance_type: "t2.micro"
   vars_files:
     - vars.yml
 
@@ -19,10 +15,9 @@
         instance_type: "{{ instance_type }}"
         image: "{{ image }}"
         wait: true
-        count: 3
+        count: "{{ cluster_size }}"
         assign_public_ip: yes
-        instance_tags:
-          monan: zookeeper
+        instance_tags: "{{ tags }}"
       register: ec2
 
     - name: Add instances to a host group
@@ -34,7 +29,9 @@
 
 - name: Configure launched instance
   hosts: launched
-  user: ec2-user
+  vars_files:
+    - vars.yml
+  user: "{{ ec2_user }}"
   sudo: True
   gather_facts: True
 
@@ -42,3 +39,4 @@
     - common
     - supervisor
     - zookeeper
+    - exhibitor
