--- a/deploy.yml
+++ b/deploy.yml
@@ -1,4 +1,5 @@
-- name: Provisiong ec2 instances
+- name: Deploying ec2 instances
+  hosts: all
   gather_facts: False
   vars_files:
     - vars.yml
