--- a/provision.yml
+++ b/provision.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Zookeeper and Exhibitor
-  hosts: all
+  hosts: "{{ hosts }}"
   vars_files:
     - vars.yml
 
@@ -16,6 +16,10 @@
         - supervisor
         - openjdk-7-jdk
 
+    - name: Stop service
+      sudo: true
+      supervisorctl: name="exhibitor" state=stopped
+
   roles:
     - zookeeper
     - exhibitor
@@ -28,3 +32,7 @@
     - name: Update supervisor
       sudo: true
       command: supervisorctl update
+
+    - name: Restart service
+      sudo: true
+      supervisorctl: name="exhibitor" state=restarted
