Fixed typo. ROLL -> ROLE

--- a/vars.sh.example
+++ b/vars.sh.example
@@ -5,7 +5,7 @@ BUILD_REGION=us-west-2; export BUILD_REGION;
 BUILD_S3_BUCKET=...; export BUILD_S3_BUCKET;
 BUILD_S3_KEY=exhibitor; export BUILD_S3_KEY;
 
-DEPLOY_ROLL=S3-Full; export DEPLOY_ROLL;
+DEPLOY_ROLE=S3-Full; export DEPLOY_ROLE;
 DEPLOY_REGION=us-west-2; export DEPLOY_REGION;
 DEPLOY_SUBNET_ID=subnet-...; export DEPLOY_SUBNET_ID;
 DEPLOY_SECURITY_GROUP=sg-...; export DEPLOY_SECURITY_GROUP;
